--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "pool-pros",
   "version": "0.0.1",
+  "description": "RV FED code challenge",
   "main": "app.js",
+  "repository": "git@github.com:TzolkinB/Pool-Pros.git",
+  "homepage": "https://tzolkinb.github.io/Pool-Pros/",
   "scripts": {
     "start": "webpack-dev-server --open",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "firebase deploy"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Kimberly Bell",
   "license": "UNLICENSED",
@@ -29,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.20.3",
