--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RV FED code challenge",
   "main": "app.js",
   "repository": "git@github.com:TzolkinB/Pool-Pros.git",
-  "homepage": "https://tzolkinb.github.io/Pool-Pros",
+  "homepage": "",
   "scripts": {
     "start": "webpack-dev-server --open",
     "build": "webpack",
@@ -14,6 +14,7 @@
   "author": "Kimberly Bell",
   "license": "UNLICENSED",
   "dependencies": {
+    "firebase": "^5.2.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
